--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,9 @@
+$text-color: #222222;
+$header-height: 60px;
+
 body {
   font-family: sans-serif;
+  color: $text-color;
 }
 
 h1, h2, h3, h4 {
@@ -15,7 +19,7 @@ a {
 }
 
 #header {
-
+  height: $header-height;
   #main-menu {
 
   }
