--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,9 @@
 @import "variables";
 
+@import "mixins";
+
+@include fancy-links;
+
 body {
   font-family: $text-font;
   color: $text-color;
@@ -8,6 +12,10 @@ body {
 h1, h2, h3, h4 {
   font-family: $headline-font;
 
+}
+
+h2 {
+  @include large-text;
 }
 
 p {
@@ -19,7 +27,13 @@ a {
   color: $link-color;
 }
 
+.warning-button {
+  @include warning;
+  padding: 8px 12px;
+}
+
 #header {
+  @include box;
   height: $header-height;
   background-color: $theme-color;
   #main-menu {
