--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -1,3 +1,7 @@
+@mixin google-font($font) {
+  $font: unquote($font);
+  @import url(http://fonts.googleapis.com/css?family=#{$font})
+}
 @mixin warning {
   background-color: orange;
   color: #fff;
