--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,9 @@
 body {
   font-family: $text-font;
   color: $text-color;
+  @media only screen and (max-width: 960px) {
+    font-size: 125%;
+  }
 }
 
 h1, h2, h3, h4 {
@@ -36,6 +39,7 @@ a {
 @include apply-to-ie-6 {
   body {
     font-size: 125%;
+
   }
 }
 
@@ -60,12 +64,15 @@ a {
 
 #main {
   width: $content-width;
+  @media only screen and (max-width: 960px) {
+    width: auto;
+    max-width: $content-width;
+  }
   margin-left: auto;
   margin-right: auto;
 
   #content {
   }
-
   #sidebar {
   }
 }
