--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 body {
   font-family: $text-font;
   color: $text-color;
-  @media only screen and (max-width: 960px) {
+  @include large-screen {
     font-size: 125%;
   }
 }
@@ -64,7 +64,7 @@ a {
 
 #main {
   width: $content-width;
-  @media only screen and (max-width: 960px) {
+  @include large-screen {
     width: auto;
     max-width: $content-width;
   }
