--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -1,3 +1,26 @@
+@mixin tiny-screen() {
+  @media only screen and (max-width: 320px) {
+    @content;
+  }
+}
+
+@mixin small-screen() {
+  @media only screen and (max-width: 480px) {
+    @content;
+  }
+}
+@mixin medium-screen() {
+  @media only screen and (max-width: 680px) {
+    @content;
+  }
+}
+
+@mixin large-screen() {
+  @media only screen and (max-width: 960px) {
+    @content;
+  }
+}
+
 @mixin google-font($font) {
   $font: unquote($font);
   @import url(http://fonts.googleapis.com/css?family=#{$font})
