--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,8 @@
 body {
   font-family: $text-font;
   color: $text-color;
+  color: rgb(10, 15, 50);
+  background-color: hsl(60, 50%, 100%);
   @include large-screen {
     font-size: 125%;
   }
@@ -39,7 +41,6 @@ a {
 @include apply-to-ie-6 {
   body {
     font-size: 125%;
-
   }
 }
 
