--- a/css/main.css
+++ b/css/main.css
@@ -25,11 +25,15 @@ p {
 
 a {
   color: #f27731; }
+  a:hover {
+    color: #ca510d; }
 
 .warning-button {
   background-color: orange;
   color: #fff;
   padding: 8px 12px; }
+  .warning-button:hover {
+    background-color: #ffb733; }
 
 * html body {
   font-size: 125%; }
@@ -45,7 +49,13 @@ a {
   #header #main-menu li {
     display: inline; }
   #header #main-menu a {
-    color: white; }
+    color: white;
+    border-bottom: 1px solid rgba(254, 254, 254, 0);
+    padding: 6px 8px;
+    transition: border-bottom 0.4s;
+    transition-timing-function: ease-in-out; }
+    #header #main-menu a:hover {
+      border-bottom: 1px solid #fefefe; }
 
 #main {
   width: 960px;
