--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,9 @@ p {
 
 a {
   color: $link-color;
+  &:hover {
+    color: darken($link-color, 15%);
+  }
 }
 
 .warning-button {
@@ -55,6 +58,13 @@ a {
     }
     a {
       color: $menu-item-color;
+      border-bottom: 1px solid transparentize(#fefefe, 1);
+      padding: 6px 8px;
+      transition: border-bottom 0.4s;
+      transition-timing-function: ease-in-out;
+      &:hover {
+        border-bottom: 1px solid opacify(#fefefe, .5);
+      }
     }
   }
 
