--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -28,6 +28,9 @@
 @mixin warning {
   background-color: orange;
   color: #fff;
+  &:hover {
+    background-color: lighten(orange, 10%);
+  }
 }
 
 @mixin box-shadow($shadows...) {
