--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,13 @@ a {
   font-style: italic;
   text-decoration: none; }
 
+* html body {
+  font-size: 125%; }
+
 body {
   font-family: "Alegreya Sans", Arial, sans-serif;
-  color: #222222;
-  color: #0a0f32;
-  background-color: white; }
+  font-size: 1.125em;
+  color: #222222; }
   @media only screen and (max-width: 960px) {
     body {
       font-size: 125%; } }
@@ -35,12 +37,9 @@ a {
   .warning-button:hover {
     background-color: #ffb733; }
 
-* html body {
-  font-size: 125%; }
-
 #header {
-  border-radius: 6px;
-  border: 1px solid #999;
+  border-radius: 12px;
+  border: 1px solid #fff;
   box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
   -moz-box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
   -webkit-box-shadow: 2px 0px 4px #999, 1px 1px 6px #f27731;
@@ -50,9 +49,9 @@ a {
     display: inline; }
   #header #main-menu a {
     color: white;
-    border-bottom: 1px solid rgba(254, 254, 254, 0);
     padding: 6px 8px;
-    transition: border-bottom 0.4s;
+    border-bottom: 1px solid rgba(254, 254, 254, 0);
+    transition: border-bottom 0.5s;
     transition-timing-function: ease-in-out; }
     #header #main-menu a:hover {
       border-bottom: 1px solid #fefefe; }
@@ -65,8 +64,21 @@ a {
     #main {
       width: auto;
       max-width: 960px; } }
+  #main #content {
+    float: left;
+    width: 69.75%; }
+  #main #sidebar {
+    float: right;
+    width: 23.25%; }
+    #main #sidebar li {
+      list-style-type: none;
+      padding: 16px 20px;
+      border-bottom: 1px dashed #999; }
+      #main #sidebar li:hover {
+        background-color: #efefef; }
 
 #footer {
+  clear: both;
   height: 90px;
   background-color: #ccf962; }
 
