--- a/scss/partials/_mixins.scss
+++ b/scss/partials/_mixins.scss
@@ -1,21 +1,21 @@
-@mixin tiny-screen() {
+@mixin tiny-screens() {
   @media only screen and (max-width: 320px) {
     @content;
   }
 }
 
-@mixin small-screen() {
+@mixin small-screens() {
   @media only screen and (max-width: 480px) {
     @content;
   }
 }
-@mixin medium-screen() {
+@mixin medium-screens() {
   @media only screen and (max-width: 680px) {
     @content;
   }
 }
 
-@mixin large-screen() {
+@mixin large-screens() {
   @media only screen and (max-width: 960px) {
     @content;
   }
