--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,7 +13,15 @@
   }
 }
 
-$col: col-width($columns: 8);
+.error {
+  color: red;
+}
+
+.critical-error {
+  @extend .error;
+  bottom: 1px solid red;
+  font-weight: bold;
+}
 
 body {
   font-family: $text-font;
@@ -48,6 +56,18 @@ a {
 .warning-button {
   @include warning;
   padding: 8px 12px;
+}
+
+.cta-button {
+  @extend .warning-button;
+  @extend .error;
+  @include rounded;
+  font-weight: bold;
+}
+
+.super-cta-button {
+  @extend .cta-button;
+  font-size: em(20px);
 }
 
 #header {
