--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,6 +53,16 @@ a {
   }
 }
 
+%highlight {
+  font-style: italic;
+}
+
+.sub-title {
+  @extend %highlight;
+  @extend .foo !optional;
+  font-size: em(20px);
+}
+
 .warning-button {
   @include warning;
   padding: 8px 12px;
@@ -64,6 +74,7 @@ a {
   @include rounded;
   font-weight: bold;
 }
+
 
 .super-cta-button {
   @extend .cta-button;
